--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
             <h1>Refresh Me</h1>
                 <div class="dice">
                     <p>Player 1</p>
-                    <img class="img1" src="DicePics/dice1.png">
+                    <img class="img1" src="./images/dice1.png">
                 </div>
                 <div class="dice">
                     <p>Player 2</p>
-                    <img class="img 2" src="DicePics/dice2.png">
+                    <img class="img2" src="./images/dice2.png">
                 </div>
         </div>
         <script src="index.js"></script>
